# Geodesic-Attention-Engine-GAE-

./: Cargo.toml  README.md  README_OLD.md  REVIEW.md
benches/: BENCHMARK_RESULTS.md  attention_benchmark.rs  usage_example.rs
rust_src/src/: lib.rs  standard_attention.rs
src/: int8_tiled_bench
tests/: validation.rs
